--- a/languages/english/coms/memgraph.txt
+++ b/languages/english/coms/memgraph.txt
@@ -1,2 +1,9 @@
 memgraph (height),(width) (gradient colour 1) (gradient colour 2) (scale) (-t) (-l)
 Memory usage graph. Uses a logarithmic scale (to see small numbers) when you use the -l switch. Takes the switch '-t' to use a temperature gradient, which makes the gradient values change depending on the amplitude of a particular graph value (try it and see).
+
+example:
+
+memgraph 88,185 D4601F 5E6FAA -l
+or
+
+memgraph 88,185 D4601F 5E6FAA -t
